# codebase-cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: git_context.rs  lib.rs  main.rs  output.rs
src/api/: activity.rs  client.rs  config.rs  milestones.rs  mod.rs  models.rs  projects.rs  repositories.rs  tickets.rs
src/commands/: activity.rs  browse.rs  milestones.rs  mod.rs  pr.rs  projects.rs  repositories.rs  status.rs  tickets.rs
tests/: activity_tests.rs  milestones_tests.rs  new_commands_tests.rs  output_tests.rs  projects_tests.rs  repo_commits_deploy_files_tests.rs  repo_hooks_branches_tests.rs  repo_merge_requests_tests.rs  repositories_tests.rs  tickets_tests.rs
