[package]
name = "codebase-cli"
version = "0.1.0"
edition = "2024"
description = "A command-line utility implementation of the CodebaseHQ API"
license = "MIT"

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dirs = "6"
open = "5"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio-test = "0.4"
